--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Michael Chesser"]
 
 [[bin]]
 name = "gb_emu"
-path = "src/cpu.rs"
+path = "src/main.rs"
 
 [dependencies.sdl2]
 git = "https://github.com/AngryLawyer/rust-sdl2.git"
